clusters/talos-robbinsdale/apps/home/app/minio/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: minio-console-tls
  namespace: home
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: luke-minio-console-passthrough
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
      sectionName: luke-minio-console-passthrough
  hostnames:
    - "console.minio.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: minio-console
          port: 9443
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: minio-api-tls
  namespace: home
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: luke-minio-api-passthrough
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
      sectionName: luke-minio-api-passthrough
  hostnames:
    - "api.minio.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: minio
          port: 443
          weight: 1
